增加对 6、7、8 技能类型的支持 预热更新大地图 24 图名称

--- a/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/Index.cshtml
+++ b/HumphreyJ.NetCore.MKHX.Web/Views/SkillData/Index.cshtml
@@ -45,23 +45,35 @@
                 <div class="d-inline-block my-2 px-3 py-2">
                     <div class="custom-control custom-checkbox mr-4 d-inline-block">
                         <input type="checkbox" id="skillCategory_1" name="skillCategory" value="1" class="custom-control-input" />
-                        <label class="custom-control-label text-info" for="skillCategory_1">攻击技能</label>
+                        <label class="custom-control-label text-info" for="skillCategory_1">攻击类</label>
                     </div>
                     <div class="custom-control custom-checkbox mr-4 d-inline-block">
                         <input type="checkbox" id="skillCategory_2" name="skillCategory" value="2" class="custom-control-input" />
-                        <label class="custom-control-label text-danger" for="skillCategory_2">魔法技能</label>
+                        <label class="custom-control-label text-danger" for="skillCategory_2">魔法类</label>
                     </div>
                     <div class="custom-control custom-checkbox mr-4 d-inline-block">
                         <input type="checkbox" id="skillCategory_3" name="skillCategory" value="3" class="custom-control-input" />
-                        <label class="custom-control-label text-primary" for="skillCategory_3">防守技能</label>
+                        <label class="custom-control-label text-primary" for="skillCategory_3">防守类</label>
                     </div>
                     <div class="custom-control custom-checkbox mr-4 d-inline-block">
                         <input type="checkbox" id="skillCategory_4" name="skillCategory" value="4" class="custom-control-input" />
-                        <label class="custom-control-label text-success" for="skillCategory_4">回复技能</label>
+                        <label class="custom-control-label text-success" for="skillCategory_4">回复类</label>
                     </div>
                     <div class="custom-control custom-checkbox mr-4 d-inline-block">
                         <input type="checkbox" id="skillCategory_5" name="skillCategory" value="5" class="custom-control-input" />
-                        <label class="custom-control-label text-warning" for="skillCategory_5">辅助技能</label>
+                        <label class="custom-control-label text-warning" for="skillCategory_5">辅助类</label>
+                    </div>
+                    <div class="custom-control custom-checkbox mr-4 d-inline-block">
+                        <input type="checkbox" id="skillCategory_6" name="skillCategory" value="6" class="custom-control-input" />
+                        <label class="custom-control-label text-warning" for="skillCategory_6">攻击特技</label>
+                    </div>
+                    <div class="custom-control custom-checkbox mr-4 d-inline-block">
+                        <input type="checkbox" id="skillCategory_7" name="skillCategory" value="7" class="custom-control-input" />
+                        <label class="custom-control-label text-primary" for="skillCategory_7">防御特技</label>
+                    </div>
+                    <div class="custom-control custom-checkbox mr-4 d-inline-block">
+                        <input type="checkbox" id="skillCategory_8" name="skillCategory" value="8" class="custom-control-input" />
+                        <label class="custom-control-label text-danger" for="skillCategory_8">特殊特技</label>
                     </div>
                 </div>
                 <div class="d-inline-block my-2 px-3 py-0">
